--- a/app/views/partials/sidebar.html
+++ b/app/views/partials/sidebar.html
@@ -8,7 +8,7 @@
 				<a ui-sref="home"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
 			</li>
 			<li ng-class="{ active: isActive('/censuses') }">
-				<a ui-sref="censuses"><i class="fa fa-users"></i> <span>Census</span></i></a>
+				<a ui-sref="censuses"><i class="fa fa-users"></i> <span>Persons</span></i></a>
 			</li>
 
 			<li ng-class="{ active: isActive('/residences') }">
