--- a/views/map.html
+++ b/views/map.html
@@ -1,2 +1,9 @@
-<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet'/>
+<link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css" rel="stylesheet"/>
+<script src="https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js"></script>
+
+<div class="row">
+<div id="map"></div>
+</div>
+
+<script src="lib/borbs/house-data.js"></script>
+<script src="lib/borbs/map.js"></script>
