--- a/views/map.html
+++ b/views/map.html
@@ -1,9 +1,11 @@
-<link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css" rel="stylesheet"/>
+<link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css" rel="stylesheet" />
+<link href="lib/borbs/select2/select2.css" rel="stylesheet" />
+<link href="lib/borbs/style.css" rel="stylesheet" />
+
+<div id="map" class="map" style="position: absolute; width: 100%; height: 92.5%;"></div>
+<select id="residents" class="js-example-placeholder-single" style="position: absolute; right: 0px; top: 40px; margin: 20px; width: 20%;"></select>
+
 <script src="https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js"></script>
-
-<div class="row">
-<div id="map"></div>
-</div>
-
+<script src="lib/borbs/select2/select2.js"></script>
 <script src="lib/borbs/house-data.js"></script>
 <script src="lib/borbs/map.js"></script>
