latest commit - jonpecson

--- a/views/form-parents.html
+++ b/views/form-parents.html
@@ -19,19 +19,19 @@
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.fatherFirstName.$invalid }">
                             <label for="firstName">First Name</label>
-                            <input class="form-control" name="fatherFirstName" type="text" placeholder="Juan" ng-model="person.parent.fatherFirstName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="fatherFirstName" type="text" placeholder="Juan" ng-model="vm.person.fatherFirstName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.fatherLastName.$invalid }">
                             <label for="lastName">Last Name</label>
-                            <input class="form-control" name="fatherLastName" type="text" placeholder="Dela Cruz" ng-model="person.parent.fatherLastName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="fatherLastName" type="text" placeholder="Dela Cruz" ng-model="vm.person.fatherLastName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.fatherMiddleName.$invalid }">
                             <label for="fatherMiddleName">Middle Name</label>
-                            <input class="form-control" name="fatherMiddleName" type="text" placeholder="Santiago" ng-model="person.parent.fatherMiddleName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="fatherMiddleName" type="text" placeholder="Santiago" ng-model="vm.person.fatherMiddleName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                 </div>
@@ -40,13 +40,13 @@
                     <div class="col-md-3">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.fatherDateOfBirth.$invalid }">
                             <label for="dateOfBirth">Date of Birth</label>
-                            <input class="form-control" name="fatherDateOfBirth" ng-model="person.parent.fatherDateOfBirth" type="date">
+                            <input class="form-control" name="fatherDateOfBirth" ng-model="vm.person.fatherDateOfBirth" type="date">
                         </div>
                     </div>
                     <!-- <div class="col-md-3">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.fatherDateOfBirth.$invalid }">
                             <label for="placeOfBirth">Place Of Birth</label>
-                            <input class="form-control" name="fatherPlaceOfBirth" type="text" placeholder="Kabankalan City" ng-model="person.parent.fatherPlaceOfBirth">
+                            <input class="form-control" name="fatherPlaceOfBirth" type="text" placeholder="Kabankalan City" ng-model="vm.person.fatherPlaceOfBirth">
                         </div>
                     </div> -->
                 </div>
@@ -76,19 +76,19 @@
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.motherFirstName.$invalid }">
                             <label for="firstName">First Name</label>
-                            <input class="form-control" name="motherFirstName" type="text" placeholder="Juan" ng-model="person.parent.motherFirstName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="motherFirstName" type="text" placeholder="Juan" ng-model="vm.person.motherFirstName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.motherLastName.$invalid }">
                             <label for="lastName">Last Name</label>
-                            <input class="form-control" name="motherLastName" type="text" placeholder="Dela Cruz" ng-model="person.parent.motherLastName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="motherLastName" type="text" placeholder="Dela Cruz" ng-model="vm.person.motherLastName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-group" ng-class="{ ' has-error': ParentForm.motherMiddleName.$invalid }">
                             <label for="middleName">Middle Name</label>
-                            <input class="form-control" name="motherMiddleName" type="text" placeholder="Santiago" ng-model="person.parent.motherMiddleName" validator="required" no-validation-message="true">
+                            <input class="form-control" name="motherMiddleName" type="text" placeholder="Santiago" ng-model="vm.person.motherMiddleName" validator="required" no-validation-message="true">
                         </div>
                     </div>
                 </div>
@@ -97,13 +97,13 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="dateOfBirth">Date of Birth</label>
-                            <input class="form-control" name="motherDateOfBirth" ng-model="person.mother.dateOfBirth" type="date">
+                            <input class="form-control" name="motherDateOfBirth" ng-model="vm.person.dateOfBirth" type="date">
                         </div>
                     </div>
                     <!-- <div class="col-md-3">
                         <div class="form-group">
                             <label for="placeOfBirth">Place Of Birth</label>
-                            <input class="form-control" name="motherPlaceOfBirth" type="text" placeholder="Kabankalan City" ng-model="person.parent.motherPlaceOfBirth">
+                            <input class="form-control" name="motherPlaceOfBirth" type="text" placeholder="Kabankalan City" ng-model="vm.person.motherPlaceOfBirth">
                         </div>
                     </div> -->
                 </div>
@@ -113,7 +113,8 @@
         <hr />
     </div>
     <!-- /.row -->
-    <p>{{person.parent}}</p>
+    <p></p>
+    <p>{{vm.person}}</p>
     <br />
     <br />
     
