--- a/views/censuses.html
+++ b/views/censuses.html
@@ -36,19 +36,19 @@
                                 <tr>
                                     <th>First Name</th>
                                     <th>Last Name</th>
-                                    <th>Birth Date</th>
                                     <th>Gender</th>
-                                    <th>Email</th>
+                                    <th>Birth Date</th>
+                                    <th>Place Of Birth</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="row in census.rowCollection">
-                                    <td>{{row.firstName}}</td>
-                                    <td>{{row.lastName}}</td>
-                                    <td>{{row.birthDate}}</td>
+                                <tr ng-repeat="row in vm.persons">
+                                    <td>{{row.first_name}}</td>
+                                    <td>{{row.last_name}}</td>
                                     <td>{{row.gender}}</td>
-                                    <td>{{row.email}}</td>
+                                    <td>{{row.date_of_birth}}</td>
+                                    <td>{{row.place_of_birth}}</td>
                                     <td>
                                         <button type="button" ng-click="toggleViewCensus()" class="btn btn-sm btn-success">
                                             <i class="fa fa-eye"></i>
