latest commit - jonpecson

--- a/views/residences.html
+++ b/views/residences.html
@@ -33,7 +33,7 @@
                         <table st-table="rowCollection" class="table table-striped" >
                             <thead>
                                 <tr>
-                                    <th>Resident Id</th>
+                                    <th>Residence Id</th>
                                     <th>Address</th>                                  
                                 </tr>
                             </thead>
